Splah Vista de pedidos Hilo para estado de los pedidos

--- a/app/src/main/res/layout/fragment_frag_informacion_empresa.xml
+++ b/app/src/main/res/layout/fragment_frag_informacion_empresa.xml
@@ -59,15 +59,19 @@
         android:id="@+id/layout_informacion"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp">
 
             <TextView
                 android:id="@+id/tvTipo"
@@ -134,7 +138,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvCartas"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent" />
 
         </LinearLayout>
     </ScrollView>
