--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="58dp"
+    android:background="@android:color/background_light"
     android:orientation="vertical"
     tools:context=".Mapa">
 
