--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -1,116 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="58dp"
+    android:orientation="vertical"
+    android:padding="15dp"
     tools:context=".Persona.Perfil">
 
     <LinearLayout
+        android:id="@+id/layout_datos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/layout_datos"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tvUsuario"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Usuario" />
-
-            <TextView
-                android:id="@+id/tvNombre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Nombre" />
-
-            <TextView
-                android:id="@+id/tvTelefono"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Telefono" />
-
-            <TextView
-                android:id="@+id/tvDireccion"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Direccion" />
-
-            <TextView
-                android:id="@+id/tvEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Email" />
-
-            <TextView
-                android:id="@+id/tvLocalidad"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Localidad" />
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/btnActualizar"
+        <TextView
+            android:id="@+id/tvUsuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Editar informacion" />
-
-        <LinearLayout
-            android:id="@+id/layout_campos"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <EditText
-                android:id="@+id/etNombre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name" />
-
-            <EditText
-                android:id="@+id/etTelefono"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="number"
-                android:text="Name" />
-
-            <EditText
-                android:id="@+id/etEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textEmailAddress"
-                android:text="Name" />
-
-        </LinearLayout>
+            android:text="Usuario" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/tvNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Mis direcciones" />
+            android:text="Nombre" />
 
-        <Button
-            android:id="@+id/btnNuevaDireccion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nueva direccion" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvDirecciones"
+        <TextView
+            android:id="@+id/tvTelefono"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Telefono" />
 
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Email" />
+
+        <TextView
+            android:id="@+id/tvLocalidad"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Localidad" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/btnEditar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Editar perfil" />
 
-</ScrollView>
+
+</LinearLayout>
