--- a/app/src/main/res/layout/item_empresa.xml
+++ b/app/src/main/res/layout/item_empresa.xml
@@ -3,14 +3,12 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_empresa"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card1"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="120dp"
         card_view:cardCornerRadius="6dp"
         card_view:cardElevation="2dp"
         card_view:cardUseCompatPadding="true">
@@ -21,17 +19,32 @@
             android:layout_height="match_parent"
             card_view:srcCompat="@color/backgroundImagenes" />
 
-        <TextView
-            android:id="@+id/tvNombre"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="@color/backgroundTextEmpresas"
-            android:padding="5dp"
-            android:text="Nombre"
-            android:textColor="#ffe3e3e3"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvNombre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:text="Nombre"
+                android:textColor="#ffe3e3e3"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvCategoria"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="2dp"
+                android:text="Categoria"
+                android:textColor="#ffe3e3e3"
+                android:textSize="12sp" />
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
