--- a/app/src/main/res/layout/item_pedido.xml
+++ b/app/src/main/res/layout/item_pedido.xml
@@ -63,6 +63,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +73,10 @@
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="2dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
