--- a/app/src/main/res/layout/item_producto_pedido.xml
+++ b/app/src/main/res/layout/item_producto_pedido.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:text="TextView"
+        android:text="Nombre"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
